Sistema de Arranque/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> todo
Rule 1     todo -> expression
Rule 2     todo -> empty
Rule 3     empty -> <empty>
Rule 4     expression -> SOLICITUD
Rule 5     expression -> REINICIOS
Rule 6     expression -> ESTADO
Rule 7     expression -> NAME

Terminals, with rules where they appear

ESTADO               : 6
NAME                 : 7
REINICIOS            : 5
SOLICITUD            : 4
error                : 

Nonterminals, with rules where they appear

empty                : 2
expression           : 1
todo                 : 0

Parsing method: LALR

state 0

    (0) S' -> . todo
    (1) todo -> . expression
    (2) todo -> . empty
    (4) expression -> . SOLICITUD
    (5) expression -> . REINICIOS
    (6) expression -> . ESTADO
    (7) expression -> . NAME
    (3) empty -> .

    SOLICITUD       shift and go to state 4
    REINICIOS       shift and go to state 5
    ESTADO          shift and go to state 6
    NAME            shift and go to state 7
    $end            reduce using rule 3 (empty -> .)

    todo                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> todo .



state 2

    (1) todo -> expression .

    $end            reduce using rule 1 (todo -> expression .)


state 3

    (2) todo -> empty .

    $end            reduce using rule 2 (todo -> empty .)


state 4

    (4) expression -> SOLICITUD .

    $end            reduce using rule 4 (expression -> SOLICITUD .)


state 5

    (5) expression -> REINICIOS .

    $end            reduce using rule 5 (expression -> REINICIOS .)


state 6

    (6) expression -> ESTADO .

    $end            reduce using rule 6 (expression -> ESTADO .)


state 7

    (7) expression -> NAME .

    $end            reduce using rule 7 (expression -> NAME .)

